# all

./: .env.example  .gitignore  api.py  build.sh  makefile  manage.py  pyproject.toml
apps/authentication/: admin.py  forms.py  middleware.py  models.py
apps/ecommerce/: models.py  permissions.py  urls.py  views.py
apps/marketplace/: admin.py  models.py  permissions.py  urls.py  views.py
apps/ts/: models.py
authentication/: backends.py  forms.py  models.py  signals.py  urls.py  views.py
authentication/migrations/: 0001_initial.py  0002_user_user_type.py  0003_alter_user_address_alter_user_avatar_and_more.py  0004_alter_user_groups.py  0005_alter_user_user_type.py
core/: admin.py  urls.py  views.py
docs/custom_fe_css/: 1.html
docs/htmx/: about.html  app.py  home.html  index.html  makefile  urls.py
docs/login-fe/: bun.lockb  package.json  tailwind.config.js  vite.config.js
docs/login-fe/src/: main.js
docs/shadcnapp/: bun.lockb  package-lock.json  package.json  vite.config.js
docs/yixian_tool/: main.py  yixian_cards.csv
ecommerce/: admin.py
ecommerce/migrations/: 0001_initial.py  0002_remove_order_seller_order_shop_alter_order_buyer.py  0003_alter_cart_buyer.py  0004_cart_shop_alter_cart_buyer_alter_cartitem_added_time.py
ecommerce/templates/: ecommerce_base.html  order_list.html
marketplace/: admin.py  models.py
marketplace/migrations/: 0001_initial.py
project/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
templates/mockup/: index.html
ts/: admin.py  urls.py
ts/migrations/: 0001_initial.py  0002_rename_tester_testuser_test.py
(+59 files in other folders)
