[tool.poetry]
name = "project"
version = "0.1.0"
description = "project"
authors = ["Thanh"]


[tool.poetry.dependencies]
python = "^3.11"
django = "^4.0"
pillow = "^10.4.0"
gunicorn = "^22.0.0"
celery = "^5.4.0"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.3.1"
python-dotenv = "^1.0.1"
django-htmx = "^1.21.0"
channels = {version = "^4.0.0", extras = ["daphne"]}

[tool.poetry.group.dev.dependencies]
pyclean = "^3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
